<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyProgress</string>
    <string name="action_settings">Einstellungen</string>
    <string name="hello_world">Hallo Welt!</string>
    <string name="search_text">Suchtext hier eingeben!</string>
    <string name="descrition_choose_curriculum">Bitte wählen Sie einen Studium:</string>
    <string name="descrition_choose_university">Bitte wählen Sie eine Universität:</string>
    <string name="file_invalid">DB File invalid!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="choose_start_configuration">Bitte wählen Sie einen Modus aus:</string>
    <string name="new_plan">Studium erstellen</string>
    <string name="empty_plan">Leer</string>
    <string name="open_plan">Studium öffnen</string>
    <string name="delete_plan">Studium löschen</string>
    <string name="open_predefined_curriculum">Vorgefertigt</string>
    <string name="dialog_new_or_existing_title">Studium erstellen</string>

    <string name="dialog_alert_new_or_existing_title">Achtung!</string>
    <string name="dialog_alert_new_or_existing_message">Um vorgefertigte Studienpläne auszuwählen
        wird eine Verbindung mit dem Internet benötigt!\n
        Wenn keine Verbindung mit dem Internet besteht, schalten Sie es bitte jetzt ein!</string>




    <string name="about">Impressum</string>
    <string name="rate">BEWERTEN</string>
    <string name="site">Projektseite</string>
    <string name="bug">Bugreport FB</string>
    <string name="done">GESCHAFFT</string>
    <string name="todo">ZU MACHEN</string>
    <string name="inprogress">IN ARBEIT</string>
    <string name="choose_progress">Wähle deinen Fortschritt:</string>
    <string name="semester_descr">SEMESTER</string>
    <string name ="delete_menu_title">Bitte Kurse auswählen!</string>

    <string name="sem_1">1</string>
    <string name="sem_2">2</string>
    <string name="sem_3">3</string>
    <string name="sem_4">4</string>
    <string name="sem_5">5</string>
    <string name="sem_6">6</string>
    <string name="sem_7">7</string>
    <string name="sem_8">8</string>
    <string name="sem_9">9</string>


    <string name="sem_add">Freifächer</string>
    <string name="menu_item_add">Wahlfach hinzufügen</string>
    <string name="menu_item_delete">Kurs löschen</string>
    <string name="menu_item_overflow">Optionen</string>
    <string name="new_course_ects_exception">Das "ECTS" - Feld muss eine Zahl >0 beinhalten!</string>
    <string name="new_course_name_exception">Bitte geben Sie einen Kursnamen ein!</string>
    <string name="new_curriculum_cname_exception">Bitte geben Sie einen Namen für das Curriculum ein!</string>
    <string name="new_curriculum_uname_exception">Bitte geben Sie einen Namen für dir Universität ein!</string>

    <string name="not_avaiable">keine Angabe</string>
    
    <string name="save_text_succ">Speichern erfolgreich!</string>
    <string name="file_not_found">Datei nicht gefunden. Entweder haben Sie noch nie gespeichert oder die Datei wurde vom internen Speicher entfernt!</string>
    <string name="menu_item_save">Speichern</string>
    <string name="menu_item_done">Fertig</string>
    <string name="menu_item_cancel">Abbrechen</string>
    <string name="course_name">Name des Kurses</string>
    <string name="course_name_hint">z.B.: Mathematik 1</string>
    <string name="cid_hint">z.B.: XXX.XXX</string>
    <string name="ects_name">ECTS</string>
    <string name="cid_name">Kursnummer</string>
    <string name="ects_hint">z.B.: 2.5</string>
    <string name="opt_course_mode">Modus</string>
    <string name="opt_course_sem">Semester(bzw. Abschnitt):</string>
    <string name="opt_course_sem_hint">z.B.: 2</string>
    <string name="ok">OK</string>
    <string name="changes_save">Es sind Änderungen vorhanden!\n Wollen Sie die Änderungen speichern?</string>
    <string name="save_xml_message">Bitte geben Sie den Namen für die Speicherdatei ein!</string>
    <string name="choose_xml_open_message">Wählen Sie eine Speicherdatei aus:</string>
    <string name="are_you_sure_to_delete_message">Sind Sie sicher, dass Sie die Datei %1$s löschen wollen?</string>


    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="about_authors">Autoren: Dominik Hirner, Andrej Müller</string>    
    <string name="about_designer">Designer: Priska Rothammer</string>    
    <string name="about_information">Kontakt: office@studyprogress.at</string>
    <string name="is_steop">Steop</string>


    <string-array name="opt_course_sem_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>Freifächer</item>
    </string-array>
    <string-array name="opt_course_mode_array">
        <item>VO</item>
        <item>VU</item>
        <item>UE</item>
        <item>KU</item>
        <item>SE</item>
        <item>LU</item>
        <item>SP</item>     
    </string-array>
    
    <string name="choose_existing_new_curriculum">Das von Ihnen gewählte Studium konnte nich gefunden werden. XML Datei fehlerhaft!</string>
    <string name="curr_not_found">Bitte wählen Sie ein neues oder vorgefertigtes Curriculum aus!</string>
    <string name="create_new_curriculum">Lege ein neues Curriculum an</string>

    <string name="add_new_university_name">Name der Universität:</string>
    <string name="add_new_curriculum_name">Name des Studiums:</string>
    <string name="add_new_curriculum_mode">Modus des Studiums:</string>
    

    <string-array name="Curriculum_type_array">
        <item>Bachelor</item>
        <item>Diplomstudium</item>
        <item>Master</item>
        <item>Doktorat</item>
        <item>Lehramt</item>
    </string-array>

    <string name="create_new_curriculum_curr_name_hint">z.B.: Informatik</string>
    <string name="create_new_curriculum_univ_name_hint">z.B.: KFU Graz</string>
    <string name="create_new_curriculum_modus">Typ des Curriculums</string>
    <string name="load_xml">Externe Dateien laden</string>
    <string name="please_wait">Bitte warten ...</string>
    <string name="download_in_progress">Dateien werden heruntergeladen ...</string>

    <string name="alert_dialog_curriculum_exists">Diese Datei existiert bereits! Möchten Sie diese überschreiben?</string>
    <string name="study_part">Abschnitt</string>
    <string name="new_line">\n</string>
    <string name="course_number">Kursnummer: </string>
    <string name="ects">E.C.T.S.: </string>
    <string name="steop">Steop: </string>
    <string name="mode">Modus: </string>
    <string name="course_exists_error">Kurs existiert bereits! Bitte geben Sie einen anderen Namen/Modus ein!</string>


</resources>