<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_course_course_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name" />

    <EditText
        android:id="@+id/create_course_course_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_name_hint"
         >
    </EditText>

    <TextView
        android:id="@+id/create_course_ects_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ects_name" />

    <EditText
        android:id="@+id/create_course_ects_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" 
        android:hint="@string/ects_hint"
        >

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/create_course_mode_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt_course_mode"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
        <Spinner
        android:id="@+id/create_course_mode_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opt_course_mode_array"
        android:prompt="@string/opt_course_mode" />

        <TextView
            android:id="@+id/create_course_sem_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_course_sem" />

        <EditText
            android:id="@+id/create_course_sem_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/opt_course_sem_hint"
            android:inputType="number" />

</LinearLayout>
