<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_item"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/menu_item_add">
    </item>
    <item
        android:id="@+id/delete_item"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="always"
        android:title="@string/menu_item_delete">
    </item>
    <item
        android:id="@+id/overflow_item"
        android:title="@string/menu_item_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/save_item"
                android:icon="@drawable/ic_action_save"
                android:showAsAction="always"
                android:title="@string/menu_item_save">
            </item>
        </menu>
    </item>

</menu>